d3dvideosink: fix regression setting window handle in pause/play

https://bugzilla.gnome.org/show_bug.cgi?id=656905